# Ez-Engine

./: README.md  example1.py  pyproject.toml  simplepy.py
docs/: index.md
examples/: example1.py
src/: simplepy.py
