# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-engine"
version = "1.0.0"
description = "Python game engine designed to make game development easier."
readme = "README.md"
authors = [{ name = "nmsderp", email = "nmsderp@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["engine"]
dependencies = [
    "pygame >= 2.1.3",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://nmsderp.github.io/Ez-Engine/"

[project.scripts]
realpython = "ez-engine.__main__:main"